✨ (angular.json, package.json, app.html, app.routes.ts, app.ts, home-page): добавление новой страницы "Home" и обновление конфигурации ♻️ (app.routes.server.ts): обновление маршрутов сервера для поддержки новой страницы 🐛 (app.spec.ts): удаление устаревшего теста приложения Создана новая страница "Home" с интерактивным симулятором финансовой жизни, что улучшает пользовательский опыт и предоставляет пользователям возможность взаимодействовать с приложением. Обновлены маршруты и конфигурации для поддержки новой функциональности, а также удалены устаревшие тесты, чтобы поддерживать чистоту кода.

--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "348e509e-1f86-4957-a111-382fede1fd17"
   },
   "newProjectRoot": "projects",
   "projects": {
