--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:investor-ng": "node dist/investor-ng/server/server.mjs"
+    "serve:ssr": "node dist/investor-ng/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
